--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "@vue/cli": "^3.1.1"
   },
   "scripts": {
-    "angular": "run(){ if [ ! -d $1 ]; then ng new $1; cd $1; ng serve --open; }; run",
-    "vue": "run(){ if [ ! -d $1 ]; then vue create $1; fi; cd $1; npm run serve;}; run"
+    "angular": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi; if [ ! -d $1 ]; then ng new $1; fi; cd $1; ng serve --open; }; run",
+    "vue": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi;     if [ ! -d $1 ]; then vue create $1; fi; cd $1; npm run serve;}; run",
+    "prompt":"echo 'no arg passed 🙂,'; echo 'exiting: please provide a file name'; echo ;"
   },
   "repository": {
     "type": "git",
