create-react-app implemented utilizing a helper script

--- a/package.json
+++ b/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "description": "house for building all your projects",
   "main": "package.json",
-  "dependencies": {},
+  "dependencies": {
+    "create-react-app": "^2.1.1"
+  },
   "devDependencies": {
     "@angular/cli": "^6.0.8",
     "@vue/cli": "^3.1.1"
   },
   "scripts": {
-    "angular": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi; if [ ! -d $1 ]; then ng new $1; fi; cd $1; ng serve --open; }; run",
+    "angular": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi; if [ ! -d $1 ]; then ng new     $1; fi; cd $1; ng serve --open; }; run",
+    "cra": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi;     if [ ! -d $1 ]; then npm run ch $1; fi; cd $1; npm run start;}; run",
     "vue": "run(){ if [ -z \"$1\" ]; then npm run prompt; return 0; fi;     if [ ! -d $1 ]; then vue create $1; fi; cd $1; npm run serve;}; run",
-    "prompt":"echo 'no arg passed 🙂,'; echo 'exiting: please provide a file name'; echo ;"
+    "prompt": "echo 'no arg passed 🙂,'; echo 'exiting: please provide a file name'; echo ;",
+    "ch": "createReactAppHelper() { create-react-app $1;}; createReactAppHelper"
   },
   "repository": {
     "type": "git",
