--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "dependencies": {
     "@angular/cli": "^6.0.8",
     "@vue/cli": "^3.1.1",
-    "create-react-app": "^2.1.1"
+    "create-react-app": "^2.1.1",
+    "preact-cli": "^2.2.1"
   },
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "scripts": {
     "setup": "npm install; npm install ember-cli --save-dev",
     "//": "argsExist, appExist, moduleExist",
+    "preact": "create default preact-app",
     "angular": "run(){ if [ -z \"$1\" ];           then npm run prompt; return 0; fi; if [ ! -d $1 ]; then ng new     $1; fi; cd $1; ng serve --open; }; run",
     "cra": "run(){ if [ -z \"$1\" ];               then npm run prompt; return 0; fi; if [ ! -d $1 ]; then npm run ch $1; fi; cd $1; npm run start;}; run",
     "vue": "run(){ if [ -z \"$1\" ];               then npm run prompt; return 0; fi; if [ ! -d $1 ]; then vue create $1; fi; cd $1; npm run serve;}; run",
@@ -24,7 +25,7 @@
     "fileName": "fileName(){ if [ -z \"$1\" ]; then npm run prompt; return 1; fi; }; fileName",
     "emberInstalled": "emberInstalled(){ if [ -d node_modules/ember-cli ]; then npm run fixEmber; else npm run prompt2; return 1; fi; }; emberInstalled",
     "fixEmber": "cat package.json | grep -v 'ember-cli\":' > temp.json; mv temp.json package.json",
-    "emberActuate":"run(){ if [ ! -d $1 ]; then ember new  $1; fi; cd $1; ember serve; }; run"
+    "emberActuate": "run(){ if [ ! -d $1 ]; then ember new  $1; fi; cd $1; ember serve; }; run"
   },
   "repository": {
     "type": "git",
