--- a/package.json
+++ b/package.json
@@ -4,26 +4,18 @@
   "description": "house for building all your projects",
   "main": "package.json",
   "dependencies": {
-    "@angular/cli": "^6.0.8",
+    "@angular/cli": "^6.2.7",
     "@vue/cli": "^3.1.1",
     "create-react-app": "^2.1.1",
+    "ember-cli": "^3.5.0",
+    "preact-cli": "^2.2.1"
   },
   "devDependencies": {},
   "scripts": {
-    "setup": "npm install; npm install ember-cli --save-dev",
-    "//": "argsExist, appExist, moduleExist",
-    "angular": "run(){ if [ -z \"$1\" ];           then npm run prompt; return 0; fi; if [ ! -d $1 ]; then ng new     $1; fi; cd $1; ng serve --open; }; run",
-    "cra": "run(){ if [ -z \"$1\" ];               then npm run prompt; return 0; fi; if [ ! -d $1 ]; then npm run ch $1; fi; cd $1; npm run start;}; run",
-    "vue": "run(){ if [ -z \"$1\" ];               then npm run prompt; return 0; fi; if [ ! -d $1 ]; then vue create $1; fi; cd $1; npm run serve;}; run",
-    "ember": "run(){ npm run emberCheck $1 2>/dev/null && npm run emberActuate $1 || echo 'failed'; }; run",
-    "prompt": "echo 'no arg passed 🙂,'; echo 'exiting: please provide a file name';",
-    "prompt2": "echo 'ember-cli node_module does not exist 🙂,'; echo 'please use `npm install ember-cli --save-dev`';",
-    "ch": "createReactAppHelper() { create-react-app $1;}; createReactAppHelper",
-    "emberCheck": "run(){ npm run fileName $1 2>/dev/null && npm run emberInstalled $1 2>/dev/null ;}; run",
-    "fileName": "fileName(){ if [ -z \"$1\" ]; then npm run prompt; return 1; fi; }; fileName",
-    "emberInstalled": "emberInstalled(){ if [ -d node_modules/ember-cli ]; then npm run fixEmber; else npm run prompt2; return 1; fi; }; emberInstalled",
-    "fixEmber": "cat package.json | grep -v 'ember-cli\":' > temp.json; mv temp.json package.json",
-    "emberActuate": "run(){ if [ ! -d $1 ]; then ember new  $1; fi; cd $1; ember serve; }; run"
+    "cleanup":"rm -R -- */",
+    "folderSetup": "npm run i angular @angular/cli; npm run i ember ember-cli; npm run i vue @vue/cli; npm run i cra create-react-app; npm run i preact preact-cli",
+    "i": "run(){ mkdir $1; cp .$1.json $1/package.json; cd $1; npm install $2 --save; }; run",
+    "f": "run(){ cd $1; npm run $1; }; run"
   },
   "repository": {
     "type": "git",
