--- a/package.json
+++ b/package.json
@@ -12,10 +12,21 @@
   },
   "devDependencies": {},
   "scripts": {
-    "cleanup":"rm -R -- */",
-    "folderSetup": "npm run i angular @angular/cli; npm run i ember ember-cli; npm run i vue @vue/cli; npm run i cra create-react-app; npm run i preact preact-cli",
-    "i": "run(){ mkdir $1; cp .$1.json $1/package.json; cd $1; npm install $2 --save; }; run",
-    "f": "run(){ cd $1; npm run $1; }; run"
+    "cleanup": "rm -R -- */",
+    "setup": "npm run runner i",
+    "all": "run(){ npm run runner make $1; npm run show;}; run",
+    "runner": "run(){ npm run $1 vue @vue/cli $2; npm run show; npm run $1 angular @angular/cli $2; npm run $1 ember ember-cli $2; npm run $1 cra create-react-app $2; npm run $1 preact preact-cli $2; }; run",
+    "i": "run(){ mkdir $1; cp .$10.json $1/package.json; cd $1; npm install $2 --save; }; run",
+    "app": "run(){ cd $1; npm run $1 $2; npm run serve $2; }; run",
+    "make": "run(){ cd $1; npm run $1 $3; }; run",
+    "show": "dir(){ for d in ./*/ ; do (cd \"$d\" && echo \"$d\" && $*); done; }; echo 'project update: look at all of the cool projects! ✨ ✨ 🌈 '; dir ls",
+    "angular": "npm run app angular",
+    "vue": "npm run app vue",
+    "cra": "npm run app cra",
+    "ember": "npm run app ember",
+    "preact": "npm run app preact",
+    "testWillDeletePreviousContent": "rm -rf ember; npm run cleanup; npm run setup; npm run all example;",
+    "test": "rm -rf */example; npm run show; npm run all example;"
   },
   "repository": {
     "type": "git",
